helm/vault/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vault.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: vault-ui
            servicePort: 8200
  tls:
  - secretName: sudojoss-tls
    hosts:
    - vault.sudojoss.com
